# Parser

./: .gitignore  .stylish-haskell.yaml  Parser.cabal
src/: Main.hs  Parser.hs
test/: ParserTests.hs  TestSuite.hs  test3.exp  test6.exp  test7.exp  test8.exp
