name:           Parser
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Mathias Weyel

executable Parser
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec >=3.1.5 && <3.2,
                   directory >=1.2.1 && <1.3,
                   filepath >=1.3.0 && <1.4
  ghc-options:     -Wall
  other-modules:   Parser

