name:           Parser
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Mathias Weyel

executable Parser
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec >=3.1.5 && <3.2,
                   directory >=1.2.1 && <1.3,
                   filepath >=1.3.0 && <1.4
  ghc-options:     -Wall
                   -fwarn-tabs
  other-modules:   Parser

test-suite TestSuite
  type:            exitcode-stdio-1.0
  main-is:         TestSuite.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  other-modules:   
                   Parser,
                   ParserTests,
                   TestSuite
  hs-source-dirs:  
                  test,
                  src

